2026-01-11 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.6.0-alpha
	* Added the docs directory.
	* Updated build.gradle.
		* Added the javadoc extension.
		* The javadoc task will output the contents in the newly added
		docs directory.
	* Updated package-info.java from the pacio package.
		* The Javadoc now uses paragraphs.
		* Redescribed the Javadoc comment for the package, now calling it
		the main package of the library.
	* Updated PacIO.java.
		* The Javadoc now uses paragraphs.
		* Compacted the code.
	* Updated package-info.java from the file package.
		* The Javadoc now uses paragraphs.
		* Reworked on the Javadoc comment, now explaining what it's used
		for, and how it's used.
	* Updated PacObject.java.
		* Removed the name variable, as it is already stored in the path
		variable.
		* The constructor now throws an IllegalArgumentException when the
		file path is null.
		* The method getName() now functions differently, now returning
		with path.getFileName.toString().
	* Updated PacFile.java.
		* The Javadoc now uses paragraphs.
	* Updated PacDirectory.java.
		* The Javadoc now uses paragraphs.
	* Updated Loadable.java.
		* The Javadoc now uses paragraphs.
		* The methods are now simply default methods and no longer
		public static, as it's redundant.
		* Elaborated the Javadoc comments for the interface and its
		methods.
		* Changed load() to open().
		* Changed unload() to close().
	* Updated Savable.java.
		* The Javadoc now uses paragraphs.
		* The save method is now simply a default method and no longer a
		public static method.
	* Added the catalog package for PacIO.
		* It features a package-info.java that briefly describes the
		package.
	* Added the rom package for PacIO.
		* It features a package-info.java that briefly describes the
		package.
	* Added the util package for PacIO.
		* It features a package-info.java that briefly describes the
		package.

2026-01-01 GarlicDude <https://www.github.com/thatgarlicdude>
